infrastructure/controllers/headscale/headplane-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headplane
  namespace: headscale
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - "headscale-admin.jvos.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headplane
          namespace: headscale
          port: 3000
          weight: 1
