infrastructure/controllers/headscale/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: headscale
  namespace: headscale
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
      sectionName: headscale-tls-passthrough
  hostnames:
    - "headscale.jvos.dev"
  rules:
    - backendRefs:
        - name: headscale
          namespace: headscale
          port: 443
